# freightdev

./: .gitignore  AUTHOR.md  GMPL-v1.md  README.md  index.tree
.ai/: build-2.rs
.ai/apps/code-agency/: pyproject.toml
.ai/apps/code-agency/backend/agents/: client.py  router.py
.ai/apps/code-agency/backend/app/api/: auth.py  health.py  ollama_api.py
.ai/apps/code-agency/backend/app/auth/: __init__.py
.ai/apps/code-agency/backend/inference/: __init__.py  generator.py
.ai/apps/code-agency/backend/memory/: context.py
.ai/apps/code-agency/backend/utils/: logger.py
.ai/apps/code-agency/docker/: .dockerignore  docker-compose.yml
.ai/apps/code-agency/docs/: QUICKSTART.md  README.md
.ai/apps/lead-agency/: README.md
.ai/devtools/_untested/: quick_archives.sh
.ai/docs/: MANUAL.md
.ai/jobs/completed/: generated_code.tsx
.ai/src/tokens/: batch.rs
.dev/_untested/environment/: env-bootstrap-v2.zsh  env-list-and-load-v1.zsh
.dev/_untested/system/: boostrap.sh
.dev/core/: fix_ssh_config.sh
.dev/devtools/_untested/: enterprise_setup.zsh  generate-enterprise-leptos.sh
.dev/devtools/testing/: zsh_shell_test.zsh
.dev/studies/structure/versions/user-study-v5/projects/freightdev_runner/: Cargo.toml
.dev/studies/structure/versions/user-study-v5/projects/freightdev_runner/include/: llama_wrapper.h
.dev/studies/structure/versions/user-study-v5/projects/freightdev_runner/src/errors/: mod.rs
.env/ai/: README.md  build-1.rs
.env/core/defaults/: values.zsh
.srv/docker/cloudflared/: docker-compose.yml
.srv/docker/n8n/: docker-compose.yml
.srv/docker/neo4j/: Dockerfile
.srv/docker/open-webui/: docker-compose.yml
.zbox/: main.zsh  test-loader.zsh
.zbox/config/: loader.zsh
.zbox/config/defaults/: prompt.zsh
.zbox/config/settings/: environment-values.zsh
.zbox/config/symlinks/: .zprofile  .zshenv  .zshrc  README.md
.zbox/docker/budibase/: .env.example  README.md  docker-compose.yml
.zbox/docker/caddy/: Caddyfile
.zbox/docker/nginx/: nginx.conf  setup-nginx.sh
.zbox/docker/openhands/: docker-compose.yml
.zbox/docker/redis/: Dockerfile
.zbox/docker/surrealdb/: Dockerfile
.zbox/docs/: INFRASTRUCTURE.md  INTERACTIVE-CLI.md  LOADER-COMPLETE.md  LOADER-FIXED.md  QUICKSTART.md
.zbox/profiles/: manifest.base.yaml  manifest.vm.yaml
.zbox/profiles/admin/: manifest.yaml
.zbox/profiles/workspace/: manifest.yaml
.zbox/source/: loader.zsh
.zbox/source/suites/: finda.zsh  fixa.zsh  serva.zsh
author/pricings/: pricing-notes.txt
author/pricings/package/: add-on.packages.yaml  support.packages.yaml
author/studies/environment/: SYSTEM-&-USER-CONFIGURATION-HIERARCHY.md_
author/studies/structure/versions/user-study-v2/Notebooks/projects/codriver/: Cargo.toml
author/studies/structure/versions/user-study-v2/Notebooks/projects/codriver/src/utils/: profile.rs
author/studies/structure/versions/user-study-v3/agents/Marketeer/designs/book-os/mark_kernel/: Cargo.toml
author/studies/structure/versions/user-study-v6/agents/src/tools/twins-azhya-enoch/: pyproject.toml
author/studies/structure/versions/user-study-v6/projects/ai_platform/: Cargo.toml
dev/.continue/: config.json
dev/scripts/: pyproject.toml
dev/scripts/agents/: fix-agent.py
dev/scripts/barrels/: barrel-ui.sh
dev/scripts/clean/: clean_build_artifacts.sh
dev/scripts/helpers/: capitalize-folders.sh
dev/scripts/movers/: atom-mover.sh
dev/scripts/tools/: tree-copy.sh  tree-delete.sh  tree-make.sh
dev/temp/tree/: markbook.tree.md  scripts.tree.md  system-agents.tree.md  user-agents.tree.md
main/.ai/: Cargo.toml
main/.ai/core/crates/tools/api-gateway/: Cargo.toml
main/designs/Bookstore/crates/book_kernel/: Cargo.toml
main/designs/Bookstore/crates/book_kernel/scripts/: setup.sh
main/designs/Bookstore/crates/book_kernel/src/kernel/: tempo.rs
main/designs/Bookstore/crates/book_kernel/src/syscall/: bind.rs
main/designs/OpenHWY/: .prettierrc.jsonc
main/devtools/_untested/: backup-manager-v1.sh  backup-manager-v2.sh  setup_python-project.sh
main/templates/COMMANDS/: ai-command-template.md
main/templates/RESOURCES/: FLUTTER_RESOURCE_MAP.md
openhwy/: .gitignore  README.md  RULES.md  docker-compose.yml  index.tree  init.sh  openhwy-workspace.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml
openhwy/app/hwy-tms/: .env.example  pubspec.yaml
openhwy/apps/dispatcher/: pubspec.yaml
openhwy/crates/api/: .env.example  .gitignore  Cargo.toml  Dockerfile
openhwy/crates/api/src/: main.rs
openhwy/crates/api/src/middleware/: mod.rs
openhwy/crates/api/src/models/: document.rs  driver.rs  invoice.rs  load.rs  message.rs  mod.rs  user.rs
openhwy/crates/api/src/routes/: auth.rs  documents.rs  drivers.rs  invoices.rs  loads.rs  messages.rs  mod.rs  payments.rs
openhwy/crates/api/src/services/: mod.rs  surreal_service.rs
openhwy/crates/api/src/utils/: jwt.rs
openhwy/docs/: ARCHITECTURE_DIAGRAM.md  FLUTTER_APP_ANALYSIS.md  QUICK_REFERENCE.md  WORDS_FROM_OPENAI.md  pricing-strategy.md
openhwy/edge/marketeer/: Cargo.toml
openhwy/edge/marketeer/src/: lib.rs
openhwy/edge/marketeer/src/adaptor/innernet/: mod.rs
openhwy/edge/marketeer/src/config/: mod.rs
openhwy/infra/: .env.example
openhwy/services/auth_service/: .env.example  Cargo.toml  Dockerfile  README.md
openhwy/services/auth_service/src/: db.rs  errors.rs  handlers.rs  jwt.rs  main.rs  models.rs
openhwy/services/connection_service/: Cargo.toml  README.md
openhwy/services/connection_service/src/: ca.rs  db.rs  handlers.rs  main.rs  models.rs
openhwy/services/download_service/: .env.example  Cargo.toml  Dockerfile
openhwy/services/payment_service/: Cargo.toml  Dockerfile  README.md
openhwy/services/payment_service/src/: db.rs  handlers.rs  main.rs  models.rs  stripe_verify.rs
openhwy/www/: .env.example  package-lock.json  package.json
pricings/development/: bundle.packages.yaml
pricings/package/: dashboard.packages.yaml
stories/_meta/: builder.tales.yaml  manifest.yaml  trucker.tales.yaml
zboxxy/: main.zsh
zboxxy/core/: loader.zsh  router.yaml
(+1269 files in other folders)
