[tool.poetry]
name = "scripts"
version = "1.0.0"
description = "Agent and utility scripts for UI automation"
authors = ["fedforge <fed.founder@gmail.com>"]
license = "MIT"
readme = "README.md"
packages = [{ include = "agents" }] 

[tool.poetry.dependencies]
python = ">=3.10,<4.0"
openai = "^1.16.2"
python-dotenv = "^1.0.1"  

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
