[build-system]
requires = ["setuptools>=65.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "codriver"
version = "0.1.0"
description = "Codriver: The meta agent that orchestrates all other agents. Your own ChatGPT, Cursor, and development environment."
readme = "README.md"
license = {text = "PROPRIETARY"}
authors = [{name = "Jesse E.E.W. Conley", email = "jesse.freightdev@gmail.com"}]
maintainers = [{name = "Jesse E.E.W. Conley", email = "jesse.freightdev@gmail.com"}]
keywords = [
 "codriver", "meta-agent", "ai", "assistant", "chatgpt", "llm",
 "ide", "editor", "development", "coding", "chat", "agent",
 "self-hosted", "transformers"
]
requires-python = ">=3.9,<4.0"

dependencies = [
    "aiofiles>=24.1.0",
    "alembic>=1.12.1",
    "asyncio-mqtt>=0.16.1",
    "asyncpg>=0.30.0",
    "attrs>=23.1.0",
    "bcrypt>=4.0.0",
    "brotli>=1.1.0",
    "chardet>=5.2.0",
    "click>=8.1.7",
    "cryptography>=45.0.6",
    "docutils>=0.20,<0.22",
    "duckdb>=1.3.2",
    "faiss-cpu>=1.7.4",
    "fastapi>=0.116.1",
    "filelock>=3.19.1",
    "filetype>=1.2.0",
    "gitpython>=3.1.40",
    "h2>=4.3.0",
    "httpx>=0.28.1",
    "ipython>=9.5.0",
    "ipywidgets>=8.1.7",
    "jinja2>=3.1.2",
    "keyring>=25.6.0",
    "numpy>=2.3.2",
    "pandas>=2.1.4",
    "passlib[bcrypt]>=1.7.4",
    "protobuf>=5.27.0",
    "psutil>=6.0.0",
    "psycopg2-binary>=2.9.9",
    "pydantic>=2.11.7",
    "pydantic-settings>=2.1.0",
    "pyopenssl>=25.1.0",
    "pytest>=8.4.1",
    "pytest-asyncio>=0.21.0",
    "python-dotenv>=1.0.0",
    "python-jose[cryptography]>=3.3.0",
    "python-magic>=0.4.27",
    "python-multipart>=0.0.6",
    "python-slugify>=8.0.1",
    "pyyaml>=6.0.2",
    "redis>=5.4.0",
    "requests>=2.31.0",
    "rich>=13.7.0",
    "routes>=2.5.1",
    "scipy>=1.11.4",
    "sentence-transformers>=3.1.0",
    "simplejson>=3.20.1",
    "sphinx>=8.2.3",
    "sqlalchemy>=2.0.43",
    "structlog>=23.2.0",
    "torch>=2.3.0",
    "transformers>=4.56.0",
    "typer>=0.9.0",
    "typing-extensions>=4.15.0",
    "uvicorn[standard]>=0.35.0",
    "websockets>=12.0",
    "zstandard>=0.24.0"
]


[project.optional-dependencies]
dev = [
    "bandit>=1.7.5",
    "black>=23.11.0",
    "commitizen>=3.13.0",
    "flake8>=6.1.0",
    "httpx>=0.25.2",
    "isort>=5.12.0",
    "mkdocs>=1.5.3",
    "mkdocs-material>=9.4.8",
    "mkdocstrings[python]>=0.24.0",
    "mypy>=1.7.1",
    "pre-commit>=3.6.0",
    "pytest>=7.4.3",
    "pytest-asyncio>=0.21.1",
    "pytest-cov>=4.1.0",
    "pytest-mock>=3.12.0",
    "pytest-xdist>=3.5.0",
    "safety>=2.3.5"
]
production = [
    "celery>=5.3.4",
    "gunicorn>=21.2.0",
    "prometheus-client>=0.19.0",
    "redis>=5.0.1",
    "sentry-sdk[fastapi]>=1.38.0"
]


[project.urls]
Homepage = "https://github.com/freightdev/main/codriver"
Documentation = "https://github.com/freightdev/main/codriver/docs"
Repository = "https://github.com/freightdev/main/codriver"
"Bug Reports" = "https://github.com/freightdev/main/codriver/issues"
Changelog = "https://github.com/freightdev/main/codriver/blob/main/CHANGELOG.md"

[project.scripts]
codriver = "backend.cli:main"

[tool.setuptools]
packages = ["backend"]

[tool.setuptools.package-data]
backend = ["/*.sql", "/.json", "**/.yaml", "**/*.toml"]
