[package]
name = "hwy-tms-api"
version = "1.0.0"
edition = "2021"

[dependencies]
# Web Framework
axum = { version = "0.7", features = ["macros"] }
tokio = { version = "1", features = ["full"] }
tower = { version = "0.4", features = ["util"] }
tower-http = { version = "0.5", features = ["fs", "cors", "trace"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Database
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "uuid", "chrono", "migrate"] }

# Authentication & Security
jsonwebtoken = "9.2"
bcrypt = "0.15"
uuid = { version = "1.6", features = ["serde", "v4"] }

# Time
chrono = { version = "0.4", features = ["serde"] }

# Environment & Config
dotenvy = "0.15"

# Utility helpers
base64 = "0.21"
once_cell = "1.20"

# Error Handling
anyhow = "1.0"
thiserror = "1.0"

# Validation
validator = { version = "0.16", features = ["derive"] }

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# HTTP Client (for external APIs if needed)
reqwest = { version = "0.11", features = ["json"] }

[dev-dependencies]
