[package]
name = "marketeer"
version = "0.1.0"
edition = "2021"
authors = ["Fast & Easy Dispatching LLC"]
description = "Production edge router for HWY-TMS built on Pingora"

[dependencies]
pingora = "0.6"
pingora-core = "0.6"
pingora-proxy = "0.6"
pingora-load-balancing = "0.6"
pingora-cache = "0.6"
pingora-http = "0.6"

tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_yaml = "0.9"
serde_json = "1"

async-trait = "0.1"
anyhow = "1"
thiserror = "2"
tracing = "0.1"
tracing-subscriber = "0.3"

notify = "8"  # File watching for hot-reload
dashmap = "6"  # Concurrent HashMap
regex = "1"
glob = "0.3"

# Rate limiting
governor = "0.10"
nonzero_ext = "0.3"

# JWT auth
jsonwebtoken = "9"

# ACME/Let's Encrypt
acme-lib = "0.9"
rcgen = "0.14"

# HTTP
hyper = { version = "1", features = ["full"] }
hyper-util = { version = "0.1", features = ["tokio"] }
http-body-util = "0.1"
http = "1"
bytes = "1"
reqwest = { version = "0.11", features = ["json"] }

# Compression
flate2 = "1"
brotli = "8"

# Metrics
prometheus = { version = "0.14", features = ["process"] }

[dev-dependencies]
tokio-test = "0.4"
