[package]
name = "download_service"
version = "0.1.0"
edition = "2021"
authors = ["Fast & Easy Dispatching LLC"]
description = "HWY-TMS Download Service (App Binary Distribution)"

[dependencies]
tokio = { version = "1.35", features = ["full"] }
axum = "0.7"
tower = "0.4"
tower-http = { version = "0.5", features = ["cors", "trace", "fs"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
thiserror = "2.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
dotenvy = "0.15"
reqwest = { version = "0.11", features = ["json", "stream"] }
tokio-util = { version = "0.7", features = ["io"] }
jsonwebtoken = "9.2"

[dev-dependencies]
