[package]
name = "freightdev_runner"
version = "0.1.0"
edition = "2024"
authors = ["Jesse E.E.W. Conley <jesse.freightdev@gmail.com>"]
description = "High-performance LLaMA inference runner with FFI bindings"
license = "MIT"
repository = "https://github.com/freightdev/main/freightdev_runner"
keywords = [
    "llm", "llama", "inference", "agents", "ai",
    "ffi", "bindings", "tokenization", "rust",
    "neural-network"
]
categories = [
    "api-bindings", "science",
    "wasm", "development-tools"
]
readme = "README.md"
rust-version = "1.85"

[[bin]]
name = "freightdev-runner"
path = "src/main.rs"

[lib]
name = "freightdev_runner"
path = "src/lib.rs"

[dependencies]
clap = { version = "4.4", features = ["derive", "env", "color"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2.0"
anyhow = "1.0"
log = { version = "0.4", optional = true }
env_logger = { version = "0.11.8", optional = true }
regex = "1.10"
tokio = { version = "1.0", features = ["rt", "rt-multi-thread", "macros"], optional = true }
memmap2 = { version = "0.9", optional = true }
rayon = { version = "1.7", optional = true }
config = { version = "0.15.14", optional = true }

[build-dependencies]
bindgen = { version = "0.72", features = ["runtime"] }
cc = "1.0"
cmake = "0.1"
pkg-config = "0.3"

[dev-dependencies]
tempfile = "3.8"
criterion = { version = "0.7", features = ["html_reports"] }
proptest = "1.4"
assert_cmd = "2.0"
predicates = "3.0"

[features]
cuda = []
metal = []
rocm = []
vulkan = []
blas = []
openmp = []
mkl = []
accelerate = []
async = ["tokio"]
parallel = ["rayon"]
mmap = ["memmap2"]
config-file = ["config"]
regen-bindings = []
debug-symbols = []
default = ["logging"]
logging = ["log", "env_logger"]
bindgen = []

# Performance optimizations for release builds
[profile.release]
lto = "fat"
codegen-units = 1
panic = "abort"
strip = "symbols"
opt-level = 3
overflow-checks = false

# Slightly optimized dev builds for faster iteration
[profile.dev]
opt-level = 1
debug = true
overflow-checks = true

# Fast compilation for development
[profile.dev.package."*"]
opt-level = 3

# Benchmarking profile
[profile.bench]
lto = "fat"
codegen-units = 1
debug = false
overflow-checks = false
opt-level = 3

# Testing profile
[profile.test]
opt-level = 1
debug = true

# Package metadata for docs.rs
[package.metadata.docs.rs]
features = ["regen-bindings", "async", "parallel"]
rustdoc-args = ["--cfg", "docsrs"]
targets = ["x86_64-unknown-linux-gnu", "x86_64-apple-darwin", "x86_64-pc-windows-msvc"]

# Cargo workspace configuration (if this becomes part of a workspace)
[workspace]
resolver = "2"

# Benchmark configuration
#[[bench]]
#name = "inference_bench"
#path = "benches/inference_bench.rs"
#harness = false

#[[bench]]
#name = "tokenization_bench"
#path = "benches/tokenization_bench.rs"
#harness = false

# Example configuration
#[[example]]
#name = "simple_inference"
#path = "examples/simple_inference.rs"
#required-features = []

#[[example]]
#name = "batch_processing"
#path = "examples/batch_processing.rs"
#required-features = ["parallel"]

# Platform-specific dependencies
[target.'cfg(unix)'.dependencies]
libc = "0.2"

[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3", features = ["winuser", "consoleapi"] }

[target.'cfg(target_os = "macos")'.dependencies]
core-foundation = { version = "0.10.1", optional = true }
core-graphics = { version = "0.25", optional = true }

# Conditional compilation for different architectures
[target.'cfg(target_arch = "x86_64")'.dependencies]
# x86_64 specific optimizations could go here

[target.'cfg(target_arch = "aarch64")'.dependencies]
# ARM64 specific optimizations could go here