[tool.poetry]
name = "azhya-enoch-ai"
version = "1.0.0"
description = "Dual-personality AI (Azhya & Enoch) for voice, trading, and automation"
authors = ["Your Name <your.email@example.com>"]
license = "N/A"
readme = "README.md"
packages = [{ include = "azhya_enoch_ai" }]

[tool.poetry.dependencies]
python = ">=3.11,<4.0"
numpy = "1.26.4"
tensorflow = ">=2.14,<2.17"
pandas = "2.3.1"
scikit-learn = "1.3.0"
yfinance = "0.2.33"
speechrecognition = "3.10.0"
pyttsx3 = "2.90"
requests = "^2.32.4"
beautifulsoup4 = "^4.13.4"
selenium = "^4.14.0"
webdriver-manager = "^4.0.1"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
