[package]
name        = "mark_kernel"
version     = "0.1.0"
edition     = "2025"
build       = "build.rs"
description = ""
license     = "GPL-v3"
repository  = "https://github.com/freightdev/bookmark/mark-kernel"
readme      = "README.md"
default-run = "mark"
include     = [
  "README.md",
  "src/**/*",
  "build.rs",
  "justfile",
]

[lib]
name = "mark"
path = "src/lib.rs"

[[bin]]
name = "markd"
path = "src/bin/markd.rs"
